# pdf_utility

./: .gitmessage  CHANGELOG.md  README.md  pdf_utility.py  pyproject.toml
docs/: Makefile  conduct.md  conf.py  contributing.md  example.ipynb  example.md  index.md  make.bat
pdf_utility/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pdf_utility/docs/: conf.py  example.ipynb
pdf_utility/src/pdf_utility/: pdf_utility.py
src/pdf_utility/: __init__.py  pdf_utility.py
tests/: test_pdf_utility.py
