[tool.poetry]
name = "pdf_utility"
version = "0.1.0"
description = "A package for managing PDF files"
authors = ["Oluwafemi Omitusa"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omitusa/pdf_utility"
keywords = ["pdf", "utility", "document-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
PyPDF2 = "^3.0.0"
pypdf = "^3.0.0"
pdfrw = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.0"
sphinx = "^7.0"
sphinx-rtd-theme = "^1.0"
myst-nb = "^1.0"
python-semantic-release = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = ["pyproject.toml:version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
