[tool.poetry]
name = "pdf_utility"
version = "0.1.0"
description = "A package for managing PDF files"
authors = ["Oluwafemi Omitusa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pypdf = ">=3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
